# data-structure

./: CMakeLists.txt  README.md
include/: BigInt.h  LinearListArray.h  LinearListLinked.h  Polynomial.h
src/: BigInt.cpp  LinearListArray.cpp  LinearListLinked.cpp  Polynomial.cpp  main.cpp
